loopdowhile.Poucet1.scala.error
Compilation error:
Poucet1:1: error: Missing closing brace `}' assumed here
var sortie = false
^Poucet1:1: error: Missing closing brace `}' assumed here
var sortie = false
^Poucet1:1: error: expected class or object definition
var sortie = false
^Poucet1:2: error: expected class or object definition
while (sortie == false) {
^Poucet1:18: error: Missing closing brace `}' assumed here
    gauche
    ^